--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -202,15 +202,12 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="5dp">
-
                 <TextView
-                    android:id="@+id/phoneLB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:gravity="center_vertical"
-                    android:paddingLeft="5dp"
                     android:text="Phone"
                     android:textColor="@color/primary"
                     android:textSize="20sp"
@@ -225,12 +222,43 @@
                     android:background="@null"
                     android:gravity="center_vertical"
                     android:inputType="phone"
-                    android:paddingLeft="5dp"
+                    android:layout_marginLeft="5dp"
                     android:text="121212"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="normal" />
-            </LinearLayout>        </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingVertical="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="5dp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="5dp"
+                    android:text="Password "
+                    android:textColor="@color/primary"
+                    android:textSize="20sp"
+                    android:textStyle="normal" />
+                <EditText
+                    android:id="@+id/editTextTextPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="**********"
+                    android:inputType="textPassword" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -263,7 +291,22 @@
                 android:text="Cancel Profile" />
         </LinearLayout>
 
+
+
     </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--<android.widget.Button-->
+<!--android:id="@+id/changePasswordBtn"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--android:background="@drawable/custom_button_booking"-->
+<!--android:gravity="right|center_vertical"-->
+<!--android:shadowColor="@color/white"-->
+<!--android:text="Change"-->
+<!--android:textColor="@color/primary"-->
+<!--android:textSize="14sp"-->
+<!--app:rippleColor="@color/white"-->
+<!--app:strokeColor="@color/white" />-->
