--- a/app/src/main/res/layout/activity_edit_location.xml
+++ b/app/src/main/res/layout/activity_edit_location.xml
@@ -3,45 +3,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightgrey"
     android:layout_gravity="center_horizontal"
-    tools:context=".hotel.hotel_detail.SubHotelDetailAddress"
-    android:layout_marginBottom="10dp">
+    tools:context=".partner.property.sub_property.EditLocationActivity"
+    >
+
     <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@+id/searchLayout"
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
         >
     </fragment>
     <LinearLayout
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:backgroundTint="@color/white"
         android:gravity="center"
         android:orientation="horizontal"
         android:paddingHorizontal="5dp"
-        android:paddingVertical="10dp"
-        android:paddingTop="10dp">
-
+        android:paddingVertical="10dp">
         <EditText
-            android:id="@+id/EditText01"
+            android:id="@+id/searchET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:singleLine="true"
             android:hint="your hotel address"></EditText>
 
         <Button
-            android:id="@+id/Button01"
+            android:id="@+id/searchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Search"></Button>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="right"
+        android:layout_alignParentBottom="true">
+        <android.widget.Button
+            android:id="@+id/currentLocationBtn"
+            android:layout_width="70dp"
+            android:layout_weight="1"
+            android:background="@drawable/baseline_my_location_24"
+            android:layout_height="70dp"
+            android:layout_marginBottom="10dp"></android.widget.Button>
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Save Location"></Button>
+    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/savedListPB"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_gravity="center"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="15dp" />
 </RelativeLayout>
 
 <!--<fragment-->
