--- a/app/src/main/res/layout/fragment_sub_hotel_detail_image_list.xml
+++ b/app/src/main/res/layout/fragment_sub_hotel_detail_image_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SubBookingDetailImageList">
+    tools:context=".hotel.hotel_detail.SubBookingDetailImageList">
     <GridView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
