--- a/app/src/main/res/layout/fragment_hotel_detail_image_service_title.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail_image_service_title.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
     tools:context=".hotel.hotel_detail.SubHotelDetailImage"
     android:layout_gravity="center_horizontal"
     android:background="@color/lightgrey">
