--- a/app/src/main/res/layout/fragment_sub_hotel_detail_description.xml
+++ b/app/src/main/res/layout/fragment_sub_hotel_detail_description.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".hotel.hotel_detail.SubHotelDetailDescription"
     android:padding="10dp"
-
+    android:background="@color/white"
+    android:layout_marginBottom="10dp"
     >
 
     <!-- TODO: Update blank fragment layout -->
