--- a/app/src/main/res/layout/room_recyclerview_layout.xml
+++ b/app/src/main/res/layout/room_recyclerview_layout.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="20dp">
+    android:paddingBottom="20dp"
+    android:background="@color/white"
+    android:layout_marginBottom="10dp">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
