--- a/app/src/main/res/layout/activity_add_hotel.xml
+++ b/app/src/main/res/layout/activity_add_hotel.xml
@@ -106,20 +106,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cityET" />
 
-
         <com.google.android.flexbox.FlexboxLayout
             android:id="@+id/flexboxLayout"
-            android:layout_width="389dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:alignContent="stretch"
-            app:alignItems="stretch"
             app:flexWrap="wrap"
+            app:justifyContent="space_around"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/chooseImageBtn">
-
-        </com.google.android.flexbox.FlexboxLayout>
+            app:layout_constraintTop_toBottomOf="@+id/chooseImageBtn"/>
 
         <Button
             android:id="@+id/submitBtn"
