--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -60,22 +60,21 @@
                         android:layout_height="2dp"
                         android:background="?android:attr/listDivider" />
 
-                    <EditText
+                    <AutoCompleteTextView
                         android:id="@+id/locationET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
-                        android:clickable="true"
                         android:layout_marginVertical="5dp"
                         android:drawableStart="@drawable/ic_search"
                         android:drawablePadding="10dp"
                         android:ems="10"
                         android:layout_marginHorizontal="10dp"
-                        android:focusable="false"
                         android:hint="Enter Destination"
-                        android:inputType="textPersonName"
+                        android:inputType="text"
                         android:paddingVertical="10dp"
                         android:paddingStart="5dp" />
+
 
                     <View
                         android:id="@+id/divider2"
@@ -110,33 +109,6 @@
                         app:cornerRadius="5dp" />
 
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="20dp"
-                    android:text="Top hotels curated only for you 💙"
-                    android:textSize="20dp"
-                    android:textStyle="bold" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/cityNameRV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:paddingStart="10dp"
-                    android:clipToPadding="false"
-                    android:orientation="horizontal">
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/curatedHotelRV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"/>
 
             </LinearLayout>
         </ScrollView>
