--- a/app/src/main/res/layout/room_information_bottom_sheet.xml
+++ b/app/src/main/res/layout/room_information_bottom_sheet.xml
@@ -51,9 +51,10 @@
         app:cornerRadius="50dp"
         app:icon="@drawable/ic_plus"
         app:iconGravity="textStart"
+        android:layout_marginRight="10dp"
         app:iconPadding="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/adult_minus_btn"
-        app:layout_constraintStart_toStartOf="@+id/room_add_btn" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/adultLabel"
@@ -62,8 +63,8 @@
         android:text="1"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/adult_minus_btn"
-        app:layout_constraintEnd_toEndOf="@+id/roomLabel"
-        app:layout_constraintStart_toStartOf="@+id/roomLabel"
+        app:layout_constraintEnd_toStartOf="@+id/adult_add_btn"
+        app:layout_constraintStart_toEndOf="@+id/adult_minus_btn"
         app:layout_constraintTop_toTopOf="@+id/adult_minus_btn" />
 
     <Button
@@ -74,9 +75,10 @@
         app:cornerRadius="50dp"
         app:icon="@drawable/ic_minus"
         app:iconGravity="textStart"
+        android:layout_marginStart="150dp"
         app:iconPadding="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/room_minus_btn"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
@@ -92,62 +94,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Rooms"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <Button
-        android:id="@+id/room_add_btn"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="15dp"
-        app:cornerRadius="50dp"
-        app:icon="@drawable/ic_plus"
-        app:iconGravity="textStart"
-        app:iconPadding="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
-
-    <TextView
-        android:id="@+id/roomLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/room_add_btn"
-        app:layout_constraintEnd_toStartOf="@+id/room_add_btn"
-        app:layout_constraintStart_toEndOf="@+id/room_minus_btn"
-        app:layout_constraintTop_toTopOf="@+id/room_add_btn" />
-
-    <Button
-        android:id="@+id/room_minus_btn"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="60dp"
-        app:cornerRadius="50dp"
-        app:icon="@drawable/ic_minus"
-        app:iconGravity="textStart"
-        app:iconPadding="0dp"
-        app:layout_constraintEnd_toStartOf="@+id/room_add_btn"
-        app:layout_constraintTop_toTopOf="@+id/room_add_btn" />
-
-    <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
         android:text="Adult(s)"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView3"
