--- a/app/src/main/res/layout/partner_custom_booking_rooms.xml
+++ b/app/src/main/res/layout/partner_custom_booking_rooms.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="People:"
+            android:text="Adults:"
             android:textSize="18dp"
             android:textColor="@color/black"/>
 
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Price:"
+            android:text="Children:"
             android:textSize="18dp"
             android:textColor="@color/black"/>
 
